--- a/src/App.css
+++ b/src/App.css
@@ -464,16 +464,6 @@ a:hover {
   100% { transform: rotate(360deg); }
 }
 
-/* about-us page  */
-
-.vision {
-  font-family: 'Open Sans';
-  font-weight: bold;
-  font-size: 30px;
-  line-height: 24px;
-  margin: 20px;
-}
-
 /* footer */
 
 .footer {
@@ -570,6 +560,43 @@ a:hover {
     line-height: 24px;
     color: #828282;
   }
+
+/* about-page */
+.about-background {
+  background: #F3ECE1;
+}
+
+.about-alignment {
+  display: flex;
+  margin-top: 70px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+  .napoleon-image {
+    height: 330px;
+    margin: 40px;
+  }
+
+  .about-vision {
+    display: flex;
+    flex-direction: column;
+    width: 430px;
+    margin: 40px;
+  }
+
+    .vision {
+      font-family: 'Open Sans';
+      font-weight: bold;
+      font-size: 30px;
+      line-height: 45px;
+      margin-bottom: 10px;
+    }
+
+    .vision-support {
+      font-size: 16px;
+      line-height: 35px;
+    }
 
 @media only screen and (max-width: 1425px) {
   
@@ -818,6 +845,22 @@ a:hover {
   .rights {
     font-size: 12px;
   }
+
+  .napoleon-image {
+    height: 250px;
+    margin: 20px;
+  }
+
+  .about-vision {
+    width: 300px;
+    margin: 20px;
+  }
+
+    .vision {
+      font-size: 25px;
+      line-height: 40px;
+      margin-bottom: 10px;
+    }
   
 }
 
