about us with team members

--- a/src/App.css
+++ b/src/App.css
@@ -598,6 +598,40 @@ a:hover {
       line-height: 35px;
     }
 
+.team-title {
+  font-size: 25px;
+  line-height: 40px;
+  text-align: center;
+  margin-top: 130px;
+}
+
+.team-alignment {
+  display: flex;
+  margin: 20px 20px 100px 20px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+  .team-image {
+    height: 180px;
+    margin: 30px 50px 20px 50px;
+  }
+
+  .team-member {
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    margin-bottom: 5px;
+  }
+
+  .team-role {
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
 @media only screen and (max-width: 1425px) {
   
   .title-responsive {
