--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ body {
   .impact-button-impactpage{
     color: #4F4F4F;
     background: #F2F2F2;
-    border: 3px dashed #BDBDBD;
+    border: 3px dotted #BDBDBD;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
   }
@@ -338,6 +338,12 @@ a:hover {
   height: 120px;
 }
 
+.default-impact-image {
+  width:90%;
+  max-width: 600px;
+  margin-top: 70px;
+}
+
 /* pollutions */
 
 .pollutions {
@@ -377,7 +383,7 @@ a:hover {
   .comparison-element {
     display: flex;
     align-items: center;
-    width: 350px;
+    width: 400px;
   }
 
     .comparison-image {
@@ -416,7 +422,7 @@ a:hover {
   border: 3px dotted #FFFFFF;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
-  width: 225px;
+  width: 280px;
 }
 
   .fb-share-text {
@@ -522,6 +528,7 @@ a:hover {
   padding: 20px;
   margin: 20px;
   cursor: pointer;
+  border: 3px dotted white;
 }
 
   .science-article:hover {
@@ -557,7 +564,7 @@ a:hover {
 
 .about-alignment {
   display: flex;
-  margin-top: 70px;
+  margin-top: 100px;
   justify-content: center;
   flex-wrap: wrap;
 }
@@ -591,7 +598,7 @@ a:hover {
   font-size: 25px;
   line-height: 40px;
   text-align: center;
-  margin-top: 100px;
+  margin-top: 130px;
 }
 
 .team-alignment {
@@ -725,6 +732,10 @@ a:hover {
     width: 700px;
   }
 
+  .about-alignment {
+    margin-top: 70px;
+  }
+
 }
 
 @media only screen and (max-width: 790px) {
@@ -747,6 +758,7 @@ a:hover {
 
   .page-title {
     font-size: 48px;
+    line-height: 60px;
   }
 
   .science-alignment {
@@ -772,6 +784,7 @@ a:hover {
 
   .page-title {
     font-size: 35px;
+    line-height: 50px;
   }
 
   .science-section-title {
@@ -869,6 +882,7 @@ a:hover {
 
   .page-title {
     font-size: 32px;
+    line-height: 45px;
   }
 
 }
