line height mobile section title

--- a/src/App.css
+++ b/src/App.css
@@ -778,6 +778,10 @@ a:hover {
     width: auto;
   }
 
+  .section-title {
+    font-size: 25px;
+  }
+
 }
 
 @media only screen and (max-width: 460px) {
@@ -798,6 +802,7 @@ a:hover {
 
   .section-title {
     font-size: 25px;
+    line-height: 35px;
   }
 
   .intro-item-title {
