--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,19 @@
 /* @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap'); */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:bold,normal');
 
+.header {
+  display: flex;
+  justify-content: center;
+  color: #4F4F4F;
+}
+
+.current{
+  text-shadow: 0 0 .65px #333, 0 0 .65px #333;
+}
+
+.hide {
+  display: none;
+}
 
 body {
   background-color:#FFFFFF;
@@ -14,7 +27,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
 }
 
   .page-title {
@@ -22,8 +34,13 @@ body {
     font-weight: 800;
     font-size: 60px;
     line-height: 82px;
-    margin-top: 40px;
     color: #333333;
+    margin: 40px 20px 20px 20px;
+    width: 900px;
+  }
+
+  .cover-title {
+    margin-top: 40px;
   }
 
   .section-title {
@@ -46,21 +63,12 @@ body {
   outline: none;
 }
 
-  .impact-button-impactpage{
+  .impact-button-impactpage {
     color: #4F4F4F;
     background: #F2F2F2;
     border: 3px dotted #BDBDBD;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
-  }
-
-    .impact-button-impactpage-form {
-      margin-left: 30px;
-    }
-  
-  .impact-button-homepage-form {
-    /* margin: 10px; */
-    width: 100%;
   }
 
 button:hover {
@@ -79,272 +87,8 @@ a:hover {
 }
 
 
-/* header */
 
-.header {
-  display: flex;
-  justify-content: center;
-  color: #4F4F4F;
-}
-
-  .desktop {
-    display: flex;
-    font-size: 14px;
-    margin-right: 25px;
-    list-style-type: none;
-  }
-
-  .hamburger, .mobile {
-    display: none;
-  }
-
-  .menu {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.25);
-    border-radius: 0px 0px 8px 8px;
-    background-color: #FFFFFF;
-    width: 900px;
-  }
-
-    .logo {
-      display: flex;
-      justify-content: flex-start;
-      padding: 10px;
-      margin-right: 200px;
-    }
-
-      .logoicon {
-        height: 44px;
-        width: 44px;
-        margin-right: 10px;
-      }
-
-    .menu-impact-button {
-      font-style: normal;
-      font-weight: bold;
-      font-size: 14px;
-      line-height: 24px;
-    }
-
-    .current{
-      text-shadow: 0 0 .65px #333, 0 0 .65px #333;
-    }
-
-
-/* nav */
-
-.nav {
-  font-family: 'Open Sans';
-  font-size: 14px;
-  line-height: 40px;
-}
-
-.hide {
-  display: none;
-}
-
-
-/* cover */
-
-.cover {
-  background-color: #2FE2ED;
-}
-
-.cover-image {
-  width: 100%;
-  margin-top: 50px;
-  margin-bottom: -20px;
-}
-
-    .cover-support {
-      font-family: 'Open Sans';
-      font-weight: normal;
-      font-size: 26px;
-      line-height: 35px;
-    }
-
-    .cover-impact-button {
-      font-size: 14px;
-      line-height: 24px;
-      padding: 3px 7px 3px 7px;
-      margin-top: 20px;
-    }
-
-.impact-cover {
-  width: 100%;
-  background-color: #F2F2F2;
-}
-
-
-/* intro */
-
-.intro-container {
-  margin: 30px 10px 50px 10px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  max-width: 900px;
-}
-
-  .intro-title {
-    margin-right: 10px;
-    margin-left: 10px;
-    margin-top: 60px;
-    margin-bottom: 40px;
-  }
-  
-  .intro-row {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-    .intro-item {
-      display: flex;
-      padding: 20px;
-      align-items: center;
-      font-family: 'Open Sans';
-      font-style: normal;
-      font-size: 16px;
-      line-height: 24px;
-      width: 370px;
-      height: 80px;
-      margin: 20px;
-    }
-
-      .intro-item-image {
-        padding-right: 20px;
-        width: 100px;
-        height: 100px;
-      }
-
-      .intro-item-title {
-        font-weight: bold;
-        font-size: 20px;
-        margin-bottom: 6px;
-      }
-
-
-/* form  */
-
-.form-home {
-  max-width: 900px;
-  margin-right: 20px;
-  margin-left: 20px;
-  background: #F2F2F2;
-  border-radius: 20px;
-  padding: 20px;
-}
-
-.form-impact {
-  margin-right: 20px;
-  margin-left: 20px;
-  background: #F2F2F2;
-  border-radius: 20px;
-  padding: 10px;
-}
-
-.form-title {
-  padding-top: 30px;
-  padding-bottom: 10px;
-}
-
-.form-support {
-  font-family: 'Open Sans';
-  font-weight: 300;
-  font-size: 16px;
-  line-height: 24px;
-  padding-top: 10px;
-  padding-bottom: 30px;
-}
-
-.form-input-section {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-}
-
-  .form-input-section-impactpage {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  .form-input {
-    font-family: 'Open Sans';
-    font-weight: bold;
-    border: 3px dotted #BDBDBD;
-    border-radius: 8px;
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: normal;
-    background-color: #FFFFFF;
-    font-size: 24px;
-    line-height: 40px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-bottom: 15px;
-  }
-
-    input:focus, select:focus {
-      border-color: #BB6BD9;
-      outline: none;
-    }
-
-  .form-number {
-    margin-right: 5px;
-    width: 75px;
-    text-align: center;
-    padding-left: 15px;
-  }
-
-  .form-select {
-    margin-left: 25px;
-    appearance: none;
-    padding: 10px;
-  }
-
-  .form-button {
-    font-size: 24px;
-    line-height: 32px;
-    padding: 15px 78px 15px 78px;
-    margin-bottom: 20px;
-    /* margin: 10px; */
-  }
-
-  .form-button-position-home {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .form-button-position-impact {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-top: 20px;
-    margin-bottom: 25px;
-    justify-content: space-around;
-  }
-
-.form-image {
-  /* width: 250px;
-  margin-left: 75px; */
-  width: 100%;
-  height: 120px;
-}
-
-.default-impact-image {
-  width:90%;
-  max-width: 600px;
-  margin-top: 70px;
-}
-
-/* pollutions */
+/* pollutions & comparisons */
 
 .pollutions {
   margin-left: 20px;
@@ -355,14 +99,7 @@ a:hover {
   margin: 20px 0px 0px 0px;
 }
 
-.grams {
-  margin: 50px 0px 0px 0px;
-  font-size: 25px;
-  line-height: 40px;
-}
-
 .impact-image {
-  /* width: 50%; */
   margin-top: 60px;
   height: 250px;
 }
@@ -387,7 +124,6 @@ a:hover {
   }
 
     .comparison-image {
-      /* width: 50%; */
       height: 100px;
     }
 
@@ -409,236 +145,9 @@ a:hover {
         color: #828282;
       }
 
-/* FBShare */
-
-.fb-share-button {
-  font-family: 'Open Sans';
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 40px;
-  margin-top: 130px;
-  color: white;
-  background-color: #2F80ED;
-  border: 3px dotted #FFFFFF;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 8px;
-  width: 280px;
-}
-
-  .fb-share-text {
-    color: white;
-    font-weight: bold;
-    text-align: center;
-  }
-/* 
-  .fb-share-text:hover, .fb-share-text:link, .fb-share-text:visited, .fb-share-text:active {
-    text-decoration: none;
-    color: #4F4F4F;
-  } */
-
-/* loader */
-
-.loader {
-  border: 16px solid #2FE2ED;
-  border-radius: 50%;
-  border-top: 16px solid #BB6BD9;
-  width: 120px;
-  height: 120px;
-  -webkit-animation: spin 0.2s linear infinite; /* Safari */
-  animation: spin 0.2s linear infinite;
-}
-
-/* Safari */
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-/* footer */
-
-.footer {
-  margin-top: 50px;
-  padding: 2em;
-  text-align: center;
-}
-
-  .findUs {
-    font-family: 'Open Sans';
-    font-style: italic;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 40px;
-  }
-
-  .social-section {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
-  }
-
-    .social {
-      margin: 15px;
-      text-align: center;
-    }
-
-.rights {
-  font-family: 'Open Sans';
-  font-style: italic;
-  font-weight: 300;
-  font-size: 18px;
-  line-height: 40px;
-  color: #4F4F4F;
-  margin-top: 50px;
-  margin-bottom: 10px;
-}
-
-/* science page */
-.science-background {
-  background: #F2F2F2;
-}
-
-.science-alignment {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.science-page-title {
-  margin: 40px 20px 20px 20px;
-  width: 900px;
-}
-
-.science-section-title {
-  font-size: 25px;
-  line-height: 40px;
-  color: #333333;
-  margin: 30px 20px 0px 20px;
-  width: 900px;
-}
-
-.science-article {
-  background: white;
-  width: 840px;
-  border-radius: 10px;
-  padding: 20px;
-  margin: 20px;
-  cursor: pointer;
-  border: 3px dotted white;
-}
-
-  .science-article:hover {
-    border: 3px dotted #BB6BD9;
-    /* outline: none; */
-  }
-
-  .science-article-title {
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 24px;
-    color: #333333;
-  }
-
-  .science-article-support { 
-    font-style: italic;
-    font-size: 14px;
-    line-height: 24px;
-    color: #333333;
-  }
-
-  .science-article-date {
-    font-style: italic;
-    font-size: 14px;
-    line-height: 24px;
-    color: #828282;
-  }
-
-/* about-page */
-.about-background {
-  background: #F3ECE1;
-}
-
-.about-alignment {
-  display: flex;
-  margin-top: 100px;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-  .napoleon-image {
-    height: 330px;
-    margin: 40px;
-  }
-
-  .about-vision {
-    display: flex;
-    flex-direction: column;
-    width: 430px;
-    margin: 40px;
-  }
-
-    .vision {
-      font-family: 'Open Sans';
-      font-weight: bold;
-      font-size: 30px;
-      line-height: 45px;
-      margin-bottom: 10px;
-    }
-
-    .vision-support {
-      font-size: 16px;
-      line-height: 35px;
-    }
-
-.team-title {
-  font-size: 25px;
-  line-height: 40px;
-  text-align: center;
-  margin-top: 130px;
-}
-
-.team-alignment {
-  display: flex;
-  margin: 20px 20px 100px 20px;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-  .team-image {
-    height: 180px;
-    margin: 30px 50px 20px 50px;
-  }
-
-  .team-member {
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: center;
-    margin-bottom: 5px;
-  }
-
-  .team-role {
-    font-size: 16px;
-    line-height: 24px;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-
 
 
 @media only screen and (max-width: 1000px) {
-
-  .desktop {
-    display: none;
-  }
-
-  .mobile {
-    display: block;
-  }
 
   .header {
     color: #4F4F4F;
@@ -648,35 +157,12 @@ a:hover {
     text-align: center;
   }
 
-  .menu {
-    display: flex;
-    justify-content: flex-start;
-    background-color: transparent;
-    box-shadow: none;
-    width: 100%;
-  }
-
-  .hamburger {
-    display: block;
-    float: right;
-    cursor: pointer;
-    position: absolute;
-    top: 1.1em;
-    right: 0;
-    margin-right: 1em;
-  }
-
   .nav {
     color: #4F4F4F;
   }
 
-  .intro-item {
-    padding: 0px;
-    margin: 30px 20px 30px 20px;
-  }
-
-  .form-home {
-    margin: 0px;
+  .page-title {
+    width: 800px;
   }
 
   .impact-image {
@@ -684,24 +170,13 @@ a:hover {
     height: auto;
   }
 
-  .science-page-title {
-    width: 800px;
-  }
-  
-  .science-section-title {
-    width: 800px;
-  }
-
-  .science-article {
-    width: 800px;
-  }
-  
 }
+
 
 @media only screen and (max-width: 877px) {
 
-  .impact-button-impactpage-form {
-    margin-left: 0px;
+  .page-title {
+    width: 700px;
   }
 
   .comparison-section {
@@ -716,65 +191,26 @@ a:hover {
     }
 
       .comparison-image {
-        /* width: 50%; */
         height: 70px;
       }
 
-  .science-page-title {
-    width: 700px;
-  }
-  
-  .science-section-title {
-    width: 700px;
-  }
-
-  .science-article {
-    width: 700px;
-  }
-
-  .about-alignment {
-    margin-top: 70px;
-  }
-
 }
+
 
 @media only screen and (max-width: 790px) {
 
-  .science-page-title {
-    width: 550px;
-  }
-
-  .science-section-title {
-    width: 550px;
-  }
-
-  .science-article {
+  .page-title {
     width: 550px;
   }
 
 }
+
 
 @media only screen and (max-width: 630px) {
 
   .page-title {
     font-size: 48px;
     line-height: 60px;
-  }
-
-  .science-alignment {
-    align-items: flex-start;
-  }
-
-  .science-page-title {
-    width: auto;
-  }
-  
-  .science-section-title {
-    width: auto;
-    font-size: 25px;
-  }
-
-  .science-article {
     width: auto;
   }
 
@@ -783,6 +219,7 @@ a:hover {
   }
 
 }
+
 
 @media only screen and (max-width: 460px) {
 
@@ -791,97 +228,13 @@ a:hover {
     line-height: 50px;
   }
 
-  .science-section-title {
-    font-size: 18px;
-  }
-
-  .logo {
-    padding: 5px;
-    margin-right: 100px;
-  }
-
   .section-title {
     font-size: 25px;
     line-height: 35px;
   }
-
-  .intro-item-title {
-    font-size: 16px;
-  }
-
-  .intro-container {
-    margin: 30px 0px 50px 0px;
-  }
-
-  .intro-item {
-    padding: 0px;
-    width: auto;
-    margin-top: 60px;
-    margin-right: 20px;
-    margin-bottom: 60px;
-  }
-
-  .form-impact {
-    margin-right: 10px;
-    margin-left: 10px;
-  }
-
-    .form-input {
-      border: 3px dotted #BDBDBD;
-      border-radius: 8px;
-      font-size: 16px;
-      margin: 0px;
-      margin-bottom: 10px;
-      /* margin: 5px;
-      margin-left:10px; */
-      padding-top: 7px;
-      padding-bottom: 7px;
-    }
-
-      .form-number {
-        /* width: 40px; */
-        margin-right: 5px;
-        text-align: center;
-        padding-left: 4px;
-      }
-
-      .form-select {
-        /* width: 66%; */
-        text-align: center;
-      }
-
-      .form-button {
-        font-size: 15px;
-        width: 100%;
-        margin: 0px 0px 20px 0px;
-        padding: 15px;
-      }
-
-      .form-button-position-impact {
-        flex-direction: column;
-      }
-
-  .rights {
-    font-size: 12px;
-  }
-
-  .napoleon-image {
-    height: 250px;
-    margin: 20px;
-  }
-
-  .about-vision {
-    width: 300px;
-    margin: 20px;
-  }
-
-    .vision {
-      font-size: 25px;
-      line-height: 40px;
-      margin-bottom: 10px;
-    }
   
 }
+
 
 @media only screen and (max-width: 350px) {
 
@@ -890,4 +243,28 @@ a:hover {
     line-height: 45px;
   }
 
+}
+
+
+
+/* loader */
+
+.loader {
+  border: 16px solid #2FE2ED;
+  border-radius: 50%;
+  border-top: 16px solid #BB6BD9;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 0.2s linear infinite; /* Safari */
+  animation: spin 0.2s linear infinite;
+}
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
