--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -65,6 +65,7 @@
         padding-top: 10px;
         padding-bottom: 10px;
         margin-bottom: 15px;
+        cursor: pointer;
     }
   
       input:focus, select:focus {
@@ -104,6 +105,18 @@
       margin-top: 20px;
       margin-bottom: 25px;
       justify-content: space-around;
+    }
+
+    .form-button-old-calculation {
+      color: #4F4F4F;
+      background: #F2F2F2;
+      border: 3px dotted #BDBDBD;
+    }
+
+    .form-button-new-calculation {
+      color: white;
+      background: #BB6BD9;
+      border: 3px dotted #FFFFFF;
     }
   
   .form-image {
