loading functionality css fix in mobile version and moving css properties to pollution css file

--- a/src/App.css
+++ b/src/App.css
@@ -88,20 +88,7 @@ a:hover {
 }
 
 
-
-/* pollutions & comparisons */
-
-.pollutions {
-  margin-left: 20px;
-  margin-right: 20px;
-  animation: moveFromBottom 0.75s ease-in-out;
-}
-
-@keyframes moveFromBottom {
-  0% { transform: translateY(2000px); opacity: 0%; }
-  80% { transform: translateY(-10px); }
-  100% { transform: translateY(0px); opacity: 100%; }
-}
+/* comparisons */
 
 .pollution {
   margin: 20px 0px 0px 0px;
