--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,10 @@ body {
     border-radius: 8px;
   }
 
+  .unit-text {
+    display: inline;
+  }
+
 button:hover {
   box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
 }
