--- a/src/pages/Impact.css
+++ b/src/pages/Impact.css
@@ -4,7 +4,8 @@
 }
 
 .default-impact-image {
-    width:90%;
-    max-width: 600px;
-    margin-top: 70px;
+    width: 90%;
+    max-width: 800px;
+    margin-top: 150px;
+    margin-bottom: 30px;
 }
