--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -42,6 +42,12 @@
     margin-bottom: 10px;
   }
 
+  .modal-button {
+    padding: 10px 20px 10px 20px;
+    margin-top: 20px;
+    font-size: 14px;
+  }
+
 @media only screen and (max-width: 460px) {
 
     .rights {
