--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -90,9 +90,9 @@
     .form-type {
       width: 830px;
       margin: 10px;
-      -moz-appearance:none; /* Firefox */
-      -webkit-appearance:none; /* Safari and Chrome */
-      /* background: url(../images/arrow.svg) no-repeat right white; */
+      /* -moz-appearance:none; Firefox */
+      /* -webkit-appearance:none; Safari and Chrome */
+      background: url(../images/arrow.svg) no-repeat right white;
       appearance:none;
       padding: 10px;
       text-align-last:center;
