dropdown with moz-apprearance and webkit -appearance

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -90,12 +90,12 @@
     .form-type {
       width: 830px;
       margin: 10px;
-      /* -moz-appearance:none; Firefox */
-      /* -webkit-appearance:none; Safari and Chrome */
+      -moz-appearance:none; /* Firefox */
+      -webkit-appearance:none; /* Safari and Chrome */
       background: url(../images/arrow.svg) no-repeat right white;
-      appearance:none;
+      appearance: none;
       padding: 10px;
-      text-align-last:center;
+      text-align-last: center;
     }
   
     .form-number {
