--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 /* @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap'); */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:bold,normal');
+@import url('https://fonts.googleapis.com/css?family=Quicksand:bold,normal');
 
 .header {
   display: flex;
