--- a/src/pages/Impact.css
+++ b/src/pages/Impact.css
@@ -9,3 +9,9 @@
     margin-top: 150px;
     margin-bottom: 30px;
 }
+
+.solution-cover {
+    margin-top: 100px;
+    width: 100%;
+    background-color: #BB6BD9;
+}
