adjusting solution data

--- a/src/components/Solution.css
+++ b/src/components/Solution.css
@@ -1,8 +1,7 @@
 .solution {
-    /* background-color: #BB6BD9; */
     font-family: Quicksand;
     color: #FFFFFF;
-    padding: 50px;
+    /* padding: 50px 250px 50px 250px; */
   }
 
   .solution-title {
