--- a/src/components/Cover.css
+++ b/src/components/Cover.css
@@ -9,7 +9,7 @@
   }
   
       .cover-support {
-        font-family: 'Open Sans';
+        font-family: 'Quicksand';
         font-weight: normal;
         font-size: 26px;
         line-height: 35px;
