--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -22,7 +22,7 @@
     }
   
       .vision {
-        font-family: 'Open Sans';
+        font-family: 'Quicksand';
         font-weight: bold;
         font-size: 30px;
         line-height: 45px;
