--- a/src/components/Categories.css
+++ b/src/components/Categories.css
@@ -13,7 +13,7 @@
     .category {
         color: white;
         border-radius: 10px;
-        font-family: Open Sans;
+        font-family: 'Quicksand';
         font-style: normal;
         font-weight: bold;
         font-size: 17px;
