--- a/src/components/FBShare.css
+++ b/src/components/FBShare.css
@@ -1,5 +1,5 @@
 .fb-share-button {
-    font-family: 'Open Sans';
+    font-family: 'Quicksand';
     font-weight: bold;
     font-size: 14px;
     line-height: 40px;
