--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -37,7 +37,7 @@
 }
 
 .form-support {
-    font-family: 'Open Sans';
+    font-family: 'Quicksand';
     font-weight: 300;
     font-size: 16px;
     line-height: 24px;
@@ -66,11 +66,11 @@
     }
 
     .form-input {
-        font-family: 'Open Sans';
+        font-family: 'Quicksand';
         font-weight: bold;
         border: 3px dotted #BDBDBD;
         border-radius: 8px;
-        font-family: 'Open Sans';
+        font-family: 'Quicksand';
         font-style: normal;
         font-weight: normal;
         background-color: #FFFFFF;
@@ -111,9 +111,8 @@
       appearance: none;
       /* background-color: #F2F2F2; */
       /* color: #4F4F4F; */
-      font-family: 'Open Sans';
+      font-family: 'Quicksand';
       font-weight: bold;
-      font-family: 'Open Sans';
       font-style: normal;
       font-weight: normal;
       font-size: 24px;
