--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -23,7 +23,7 @@
     display: flex;
     padding: 20px;
     align-items: center;
-    font-family: 'Open Sans';
+    font-family: 'Quicksand';
     font-style: normal;
     font-size: 16px;
     line-height: 24px;
