--- a/src/components/Solution.css
+++ b/src/components/Solution.css
@@ -31,6 +31,9 @@
     font-size: 32px;
     line-height: 40px;
     margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .alternative-recommended{
@@ -51,7 +54,6 @@
         padding: 20px;
         background-color: #9B51E0;
         border-radius: 10px;
-        /* cursor: pointer; */
         color: #FFFFFF;
         font-style: normal;
         font-weight: bold;
@@ -72,10 +74,6 @@
     .alternative-not-rec {
         margin-top: 20px;
     }
-
-        /* .alternative:hover {
-            border: 3px dotted #FFFFFF;
-        } */
 
         .alternative-impact {
             font-size: 23px;
