--- a/src/components/Grams.css
+++ b/src/components/Grams.css
@@ -1,18 +1,15 @@
 .grams {
-  font-size: 40px;
-  line-height: 50px;
-  padding: 40px;
+  padding: 30px;
   display: flex;
-  align-items: baseline;
   justify-content: space-between;
 }
 
 .nutritional-values {
   font-size: 16px;
-  line-height: 20px;
+  line-height: 24px;
   display: flex;
   justify-content: space-evenly;
-  width: 450px;
+  width: 40%;
 }
 
   .nutritional-value {
@@ -21,10 +18,17 @@
     align-items: center;
   }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 900px) {
 
   .grams {
       display: inline;
+      border-bottom: none;
+  }
+
+  .nutritional-values {
+    justify-content: space-evenly;
+    width: 100%;
+    margin-top: 20px;
   }
     
 }
