--- a/src/components/Solution.css
+++ b/src/components/Solution.css
@@ -64,6 +64,8 @@
 
     .alternative-items {
         display: flex;
+        font-size: 36px;
+        line-height: 50px;
     }
 
     .alternative-amount {
@@ -115,6 +117,15 @@
   
   .alternative {
     width: 700px;
+  }
+
+}
+
+
+@media only screen and (max-width: 900px) {
+
+  .alternative-items {
+    justify-content: center;
   }
 
 }
