beer nutr values data fixed

--- a/src/components/Solution.css
+++ b/src/components/Solution.css
@@ -78,6 +78,7 @@
     }
 
         .alternative-impact {
+            /* background-color: #8C3BD9; */
             font-size: 23px;
             line-height: 29px;
             font-size: 16px;
