--- a/src/components/Cover.css
+++ b/src/components/Cover.css
@@ -13,7 +13,8 @@
         font-weight: normal;
         font-size: 26px;
         line-height: 35px;
-        color: black;
+        /* color: black; */
+        color: white;
       }
 
       .cover-button {
