--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 100px;
 }
 
 .header {
@@ -107,6 +108,32 @@ a:hover {
   color: #4F4F4F;
 }
 
+.beefvstofu {
+  width: 60%;
+  max-width: 900px;
+}
+
+.beefvstofumobile {
+  display: none;
+}
+
+.home-note {
+  margin: 30px 20px 0px 20px;
+  font-family: Quicksand;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+}
+
+.home-note-bold {
+  display: inline;
+  font-weight: bold;
+}
+
+.home-note-content {
+  display: inline;
+}
 
 /* comparisons */
 
@@ -178,6 +205,10 @@ a:hover {
     width: 800px;
   }
 
+  .beefvstofu {
+    width: 80%;
+  }
+
 }
 
 @media only screen and (max-width: 790px) {
@@ -197,6 +228,16 @@ a:hover {
   .comparison-element {
     width: 100%;
     max-width: none;
+  }
+
+  .beefvstofu {
+    display: none;
+  }
+
+  .beefvstofumobile {
+    display: block;
+    display: initial;
+    width: 90%;
   }
 
 }
