--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,34 @@
   margin-bottom: 100px;
 }
 
+.red-home-background {
+  background: #EB5757;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 100px;
+  padding-bottom: 100px;
+}
+
+  .red-home-text {
+    font-family: 'Quicksand';
+    font-weight: 800;
+    margin: 40px 20px 20px 20px;
+    width: 60%;
+    max-width: 820px;
+  }
+
+    .red-home-title {
+      font-size: 44px;
+      line-height: 55px;
+    }
+
+    .red-home-support {
+      font-size: 20px;
+      line-height: 25px;
+    }
+
 .header {
   display: flex;
   justify-content: center;
@@ -110,7 +138,7 @@ a:hover {
 
 .beefvstofu {
   width: 60%;
-  max-width: 900px;
+  max-width: 820px;
 }
 
 .beefvstofumobile {
@@ -209,6 +237,10 @@ a:hover {
     width: 80%;
   }
 
+  .red-home-text {
+    width: 80%;
+  }
+
 }
 
 @media only screen and (max-width: 790px) {
@@ -238,6 +270,16 @@ a:hover {
     display: block;
     display: initial;
     width: 90%;
+  }
+
+  .red-home-title {
+    font-size: 32px;
+    line-height: 40px;
+  }
+
+  .red-home-support {
+    font-size: 20px;
+    line-height: 25px;
   }
 
 }
