--- a/src/App.css
+++ b/src/App.css
@@ -17,16 +17,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 100px;
   padding-bottom: 100px;
+  color: white;
 }
 
   .red-home-text {
     font-family: 'Quicksand';
     font-weight: 800;
-    margin: 40px 20px 20px 20px;
-    width: 60%;
-    max-width: 820px;
+    margin: 70px 20px 20px 20px;
+    width: 70%;
+    max-width: 900px;
   }
 
     .red-home-title {
@@ -37,6 +37,7 @@
     .red-home-support {
       font-size: 20px;
       line-height: 25px;
+      font-weight: normal;
     }
 
 .header {
@@ -101,7 +102,7 @@ body {
   font-weight: bold;
   color: white;
   background: #BB6BD9;
-  border: 3px dotted #FFFFFF;
+  border: 1px dotted #FFFFFF;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
   font-family: 'Quicksand';
@@ -112,7 +113,7 @@ body {
   .impact-button-impactpage {
     color: #4F4F4F;
     background: #F2F2F2;
-    border: 3px dotted #BDBDBD;
+    border: 1px dotted #BDBDBD;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
   }
@@ -123,6 +124,7 @@ body {
 
 button:hover {
   box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
+  transition: 0.2s;
 }
 
 a:link, a:visited, a:active {
@@ -139,6 +141,13 @@ a:hover {
 .beefvstofu {
   width: 60%;
   max-width: 820px;
+  margin-top: 30px;
+}
+
+.foodcomparisondesktop {
+  width: 90%;
+  max-width: 1200px;
+  margin-bottom: 30px;
 }
 
 .beefvstofumobile {
@@ -146,7 +155,7 @@ a:hover {
 }
 
 .home-note {
-  margin: 30px 20px 60px 20px;
+  margin: 30px 20px 120px 20px;
   font-family: Quicksand;
   font-style: normal;
   font-size: 14px;
@@ -263,6 +272,10 @@ a:hover {
   }
 
   .beefvstofu {
+    display: none;
+  }
+
+  .foodcomparisondesktop {
     display: none;
   }
 
