--- a/src/components/Categories.css
+++ b/src/components/Categories.css
@@ -19,6 +19,7 @@
         font-size: 17px;
         text-align: center;
         cursor: pointer;
+        border: 1px dotted white;
     }
 
         button {
