--- a/src/pages/Fooprint.css
+++ b/src/pages/Fooprint.css
@@ -24,6 +24,11 @@
     background-color: #2D9CDB;
 }
 
+.step5-background {
+    background-color: black;
+}
+
+
 .closewizard {
     height: 36px;
     cursor: pointer;
@@ -163,6 +168,20 @@
         padding: 0px 30px 0px 30px;
         height: 44px;
     }
+
+
+
+.categories-selected {
+    display: flex;
+}
+
+    /* .category-selected {
+        display: flex;
+    } */
+
+        .food-selected {
+            display: flex;
+        }
 
 
 
